applications/k10/9.0.5-mdr.1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: kasten-io-ingress
  namespace: kasten-io
spec:
  ingressClassName: kommander-traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: gateway
            port:
              number: 80
        path: /k10
        pathType: ImplementationSpecific
